# rust-microservice-kafka-template

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/src/: App.css  App.jsx
services/inventory-management/: Cargo.toml
services/inventory-management/src/: main.rs
services/models/: Cargo.toml
services/models/src/: lib.rs
services/order-management/: Cargo.toml
services/order-management/src/: main.rs
services/product-management/: Cargo.toml
services/product-management/src/: main.rs
