[workspace]
members = [
    "services/product-management",
    "services/inventory-management",
    "services/order-management",
    "services/models",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = [] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
