[package]
name = "product-management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rdkafka = { workspace = true }
mongodb = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3.31"
models = { path = "../models" }
